{{$NEXT}}

0.000022  2022-07-08 15:44:44-07:00 America/Los_Angeles

    - Better support for percona 5.7
    - Do not modify config reference that is passed in, make a copy

0.000021  2021-01-19 14:55:27-08:00 America/Los_Angeles

    - For pools, make sure cache db is stopped before marking it as ready
    - Move ready file outside the directory so it is not copied with the dir (ooops)
    - Add ability to show pool diag without showing all sql-server output

0.000020  2020-12-01 15:35:36-08:00 America/Los_Angeles

    - Watcher should use POSIX::_exit() since it is exec-like
    - Minimum mysqld version 5.6.0

0.000019  2020-11-30 15:40:36-08:00 America/Los_Angeles

    - Add watcher process to make sure cleanup happens

0.000018  2020-11-20 08:46:39-08:00 America/Los_Angeles

    - Fix bug where driver could be forgotten in pool during reclaim

0.000017  2020-11-16 08:26:03-08:00 America/Los_Angeles

    - Support for older percona mysqld's that need mysql_install_db run

0.000016  2020-11-13 11:28:35-08:00 America/Los_Angeles

    - Support older version of percona
    - Minor test fixes

0.000015  2020-08-14 20:45:04-07:00 America/Los_Angeles

    - Make it possible to clear old cache
    - Do not leave garbage in /tmp from tests

0.000014  2020-07-30 22:36:47-07:00 America/Los_Angeles

    - Fix some Postgres 'starting up' issues
    - Support for percona in MySQL
    - Support for either DBD::MariaDB or DBD::mysql

0.000013  2020-07-28 21:17:30-07:00 America/Los_Angeles

    - Add module to deps

0.000012  2020-07-28 15:33:51-07:00 America/Los_Angeles

    - Add ability to clone without cp or rsync
    - Fix minimum perl version

0.000011  2020-07-27 23:07:33-07:00 America/Los_Angeles

    - Add ability to clone databases
    - Add Database pools
    - Make databases better at stopping (close connections)
    - Fix some test timeout issues under yath due to ^
    - Update copyright date

0.000010  2019-06-08 13:03:48-07:00 America/Los_Angeles
